# nasu-MIDI-Player

./: CMakeLists.txt  LICENSE  README.md  build.bat
Shaders/: NotePS.hlsl  NoteVS.hlsl
src/: main.cpp
src/Core/: Clock.h  MidiParser.cpp  MidiParser.h  MidiPlayer.cpp  MidiPlayer.h  NoteDataStore.h  OmniMIDI.h  ska_sort.hpp
src/Graphics/: Renderer.cpp  Renderer.h
